--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,12 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="src" path="/com.idega.core"/>
-	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.block.login-3.1.3.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.builder-3.1.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.core-3.1.65.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.block.web2.0-3.1.6.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.block.importer-3.1.3.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.block.login-3.1.5.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.builder-3.1.15.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/is.idega.block.family-1.0.5.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jdom/jars/jdom-1.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jai/jars/jai-1.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jai/jars/jai_codec-1.0.jar"/>
@@ -18,9 +21,6 @@
 	<classpathentry kind="var" path="MAVEN_REPO/jspapi/jars/jsp-api-2.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/ejb/jars/ejb-2.0.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/jta/jars/jta-spec1_0_1.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.block.web2.0-3.1.4.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/com.idega.block.importer-3.1.2.jar"/>
-	<classpathentry kind="var" path="MAVEN_REPO/bundles/jars/is.idega.block.family-1.0.3.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/poi/jars/poi-2.5-final-20040428.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
