--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
   <parent>
   	<groupId>com.idega.block.platform</groupId>
   	<artifactId>com.idega.block.base</artifactId>
-  	<version>3.1.0</version>
+  	<version>4.0-SNAPSHOT</version>
   </parent>
   <groupId>com.idega.block.platform</groupId>
   <artifactId>com.idega.company</artifactId>
   <packaging>jar</packaging>
-  <version>1.1.0</version>
+  <version>${com.idega.block.platform-com.idega.company-version}</version>
   <name>idegaWeb Company</name>
   <description>Company Application</description>
   <developers>
@@ -46,22 +46,28 @@
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.core</artifactId>
-      <version>3.1.0-SNAPSHOT</version>
-      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.builder</artifactId>
-      <version>2.0-SNAPSHOT</version>
-      <type>jar</type>
     </dependency>
     <dependency>
-      <groupId>bundles</groupId>
+      <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.block.login</artifactId>
-      <!--version>1.1.5</version-->
-      <version>SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>com.idega.block.addon</groupId>
+  	  <artifactId>com.idega.block.importer</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.idega.block.egov</groupId>
+      <artifactId>is.idega.block.family</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>${poi-poi-version}</version>
       <type>jar</type>
     </dependency>
   </dependencies>
-  
 </project>
