--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-  	<groupId>com.idega.block.platform</groupId>
-  	<artifactId>com.idega.block.base</artifactId>
-  	<version>4.0.0</version>
+  	<groupId>com.idega.block.egov</groupId>
+  	<artifactId>com.idega.block.egov</artifactId>
+  	<version>4.0.1-SNAPSHOT</version>
   </parent>
-  <groupId>com.idega.block.platform</groupId>
+  <groupId>com.idega.block.egov</groupId>
   <artifactId>com.idega.company</artifactId>
+  <version>4.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <version>4.0.0</version>
   <name>idegaWeb Company</name>
   <description>Company Application</description>
   
@@ -17,8 +17,8 @@
     <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
     <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection> 
      -->
-    <connection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.company/</connection>
-    <developerConnection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.platform/com.idega.company/</developerConnection>
+    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
+    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
   </scm>
   
   <developers>
@@ -56,27 +56,22 @@
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.core</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.builder</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.idega.block.platform</groupId>
       <artifactId>com.idega.block.login</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.idega.block.addon</groupId>
   	  <artifactId>com.idega.block.importer</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.idega.block.egov</groupId>
       <artifactId>is.idega.block.family</artifactId>
-      <version>4.0.0</version>
     </dependency>
     <dependency>
       <groupId>poi</groupId>
