--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <parent>
   	<groupId>com.idega.block.egov</groupId>
   	<artifactId>com.idega.block.egov</artifactId>
-  	<version>4.0.1</version>
+  	<version>4.0.2-SNAPSHOT</version>
   </parent>
   <groupId>com.idega.block.egov</groupId>
   <artifactId>com.idega.company</artifactId>
-  <version>4.0.1</version>
+  <version>4.0.2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>idegaWeb Company</name>
   <description>Company Application</description>
@@ -17,9 +17,8 @@
     <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
     <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection> 
      -->
-    <connection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</connection>
-    <developerConnection>scm:cvs:ext:${user.name}@code.idega.com:/idega/cvs:${groupId}/${artifactId}/</developerConnection>
-    <tag>com_idega_block_egov_super-4_0_1</tag>
+    <connection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.egov/com.idega.company/</connection>
+    <developerConnection>scm:cvs:ext:civilis@code.idega.com:/idega/cvs:com.idega.block.egov/com.idega.company/</developerConnection>
   </scm>
   
   <developers>
