--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,9 @@
       <artifactId>is.idega.block.family</artifactId>
     </dependency>
     <dependency>
-      <groupId>poi</groupId>
+      <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
-      <version>${poi-poi-version}</version>
+      <version>${org.apache.poi-poi-version}</version>
       <type>jar</type>
     </dependency>
     <dependency>
